welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:28: error: ':' expected but ')' found.
def serpent(s){
             ^SnakeBuggle:42: error: identifier expected but '}' found.
}
^